# font-parser

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Helvetica.otf:Zone.Identifier  Makefile  MyExecutable  README.md  cmake_install.cmake  core  main.cpp  makefile  out  test.ttx
src/: CharString.cpp  CharString.hpp  glyphClass.cpp  glyphClass.hpp  letter.cpp  letter.hpp  main.cpp  parserClass.cpp  parserClass.hpp  windowing_util.cpp  windowing_util.hpp
